# weather

./: LICENSE  README.md  pyproject.toml
weather/: cli.py  weather.py
